--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <!-- Cabeçalho -->
     <header>
         <img src="GreenCycle.png" alt="Logo Green Cycle">
+        <a href="https://greencycle5.github.io/inicio/"></a>
         <nav>
             <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="sobre-nos.html">Sobre Nós</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <a href="https://greencycle5.github.io/inicio/">Inicio</a>
+                <a href="https://greencycle5.github.io/sobre/">Sobre Nós</a>
+                <a href="https://greencycle5.github.io/parceiros/">Parceiros</a>
+                <a href="https://greencycle5.github.io/blog/">Blog</a>
+                <a href="https://greencycle5.github.io/contato/">Contato</a>
+                
             </ul>
         </nav>
     </header>
